
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int id; int offset; int size; } ;
struct TYPE_6__ {int store_path_index; int sub_path_high; int sub_path_low; } ;
struct TYPE_7__ {int status; TYPE_1__ file; TYPE_2__ path; } ;
typedef TYPE_3__ FDFSTrunkFullInfo ;


 int snprintf (char*,int const,char*,int,int,int,int,int,int,int) ;

char *trunk_info_dump(const FDFSTrunkFullInfo *pTrunkInfo, char *buff, const int buff_size)

{
 snprintf(buff, buff_size, "store_path_index=%d, " "sub_path_high=%d, " "sub_path_low=%d, " "id=%d, offset=%d, size=%d, status=%d", pTrunkInfo->path.store_path_index, pTrunkInfo->path.sub_path_high, pTrunkInfo->path.sub_path_low, pTrunkInfo->file.id, pTrunkInfo->file.offset, pTrunkInfo->file.size, pTrunkInfo->status);
 return buff;
}
